--- a/code.ipynb
+++ b/code.ipynb
@@ -86,7 +86,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fileName = 'data scientist case study sample UPCs.csv'\n",
+    "fileName = 'UPC.csv'\n",
     "upcs = []\n",
     "with open(fileName) as file:\n",
     "    for i in file:\n",
